# atlasbridge

./: .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  skills.md
.claude/: settings.json
.claude/rules/: memory-decisions.md  memory-preferences.md  memory-profile.md  memory-sessions.md  repo-reference.md
.github/workflows/: ci.yml  governance-guard.yml  issue-triage.yml  pr-status-sync.yml  publish-pypi.yml  publish-testpypi.yml  security-audit.yml  sprint-rotation.yml
aegis/: __init__.py
aegis/audit/: writer.py
aegis/bridge/: pty_supervisor.py
aegis/channels/: base.py
aegis/channels/telegram/: __init__.py  bot.py  templates.py
aegis/cli/: main.py
aegis/core/: config.py  constants.py  exceptions.py  fix_engine.py  github_client.py  pr_automation.py
aegis/core/daemon_services/: __init__.py  pr_automation_service.py
aegis/policy/: detector.py  engine.py
aegis/store/: database.py  models.py
assets/brand/: README.md
config/: policy.example_v1.yaml
config/policies/: escalation-only.yaml  profile-aware.example.yaml
config/profiles/: core.yaml  high_assurance.yaml
dashboard/: drizzle.config.ts  package-lock.json  package.json
dashboard/client/: index.html
dashboard/client/src/: App.tsx  index.css
dashboard/script/: build.ts
dashboard/server/: atlasbridge-repo.ts  compliance-engine.ts  config.ts  db.ts  evidence-engine.ts  index.ts  mock-data.ts  routes.ts  sanitize.ts  seed.ts  storage.ts  terminal.ts  zip-builder.ts
dashboard/server/auth/: github-app.ts  oidc.ts
dashboard/server/middleware/: csrf.ts  rate-limit.ts
dashboard/server/routes/: operator.ts
dashboard/server/scanner/: artifacts.ts  azure-devops.ts  bitbucket.ts  container.ts  dependencies.ts  evaluator.ts  github.ts  gitlab.ts  index.ts  infra.ts  (+7 more)
dashboard/shared/: schema.ts
docs/: README.md  adapters.md  api-stability-policy.md  approval-lifecycle.md  architecture.md  audit-export.md  automation-architecture.md  autopilot.md  branding.md  channel-message-gating.md  channel-token-setup.md  channels.md  chat-session-mode.md  claude-adapter-spec.md  claude-code-getting-started.md  cli-ux.md  cloud-spec.md  console.md  contract-surfaces.md  conversation-ux-v2.md  dashboard.md  data-model.md  deployment-profiles.md  dev-workflow-multi-agent.md  enterprise-architecture.md  enterprise-dashboard-product-spec.md  enterprise-dashboard-threat-model.md  enterprise-dashboard-ui-map.md  enterprise-data-model.md  enterprise-governance-api-spec.md  enterprise-saas-architecture.md  enterprise-transition-contracts.md  ethics-and-safety-guarantees.md  ga-boundary.md  ga-readiness-checklist.md  gemini-getting-started.md  governance-evidence.md  invariants.md  openai-getting-started.md  policy-authoring.md  (+23 more)
docs/decisions/: 001-saas-program-gate.md
scripts/automation/: __init__.py  create_enterprise_issues.py  create_feature_issues.py  governance_check.py  project_fields.py  sprint_rotate.py  triage.py
src/atlasbridge/: __init__.py  __main__.py
tests/: conftest.py
tests/console/: test_app.py  test_cli.py  test_health.py  test_supervisor.py
tests/dashboard/: conftest.py  test_cli.py  test_export.py  test_repo.py  test_sanitize.py  test_server.py
tests/e2e/: conftest.py  test_daemon_lifecycle.py  test_session_actions_e2e.py
tests/integration/: test_agent_migration.py  test_agent_sor.py  test_busy_gating.py  test_capability_audit.py  test_circuit_breaker_integration.py  test_cli.py  test_dashboard_e2e.py  test_dashboard_edition.py  test_dashboard_settings.py  test_db_migrate.py  test_edition_contract.py  test_edition_e2e.py  test_interaction_flow.py  test_pr_cli.py  test_profile_policy_flow.py  test_provider_validate.py  test_router_integration.py  test_session_lifecycle.py  test_transcript_migration.py  test_workspace_trust_flow.py
tests/policy/: test_policy_completeness.py  test_policy_coverage.py  test_policy_debug.py  test_policy_matching.py  test_policy_overlap.py  test_policy_v1_matching.py
tests/prompt_lab/: simulator.py  test_scenarios.py
tests/safety/: conftest.py  test_adapter_api_stability.py  test_agent_policy_gating.py  test_audit_attacks.py  test_audit_schema_stability.py  test_capability_registry_freeze.py  test_channel_api_stability.py  test_channel_ux_safety.py  test_cli_surface_stability.py  test_cloud_network_isolation.py  test_config_schema_stability.py  test_console_surface_freeze.py  test_dashboard_localhost_only.py  test_dashboard_route_freeze.py  test_docs_index.py  test_dry_run_safety.py  test_edition_contract.py  test_execution_boundary.py  test_gate_boundary.py  test_interaction_safety.py  test_ml_safety.py  test_module_import_boundaries.py  test_mutation_denial.py  test_no_injection_without_policy.py  test_no_queue_policy_gate.py  test_policy_bypass_vectors.py  test_policy_evaluation_contract.py  test_policy_schema_stability.py  test_prompt_injection_vectors.py  test_release_artifacts.py  test_risk_determinism_ga.py  test_state_routing_safety.py  test_streaming_safety.py  test_version_sync.py  test_workspace_trust_safety.py
tests/unit/: test_adapter_registry.py  test_agent_models.py  test_agent_state.py  test_agent_tools.py  test_architecture.py  test_audit.py  test_audit_export.py  test_audit_rotation.py  test_audit_verify.py  test_autopilot_actions.py  test_capability_guard.py  test_capability_registry.py  test_channel_message_gate.py  test_circuit_breaker.py  test_cloud_disabled.py  test_column_allowlist.py  test_config.py  test_config_environment.py  test_config_migrate.py  test_daemon_session.py  test_database.py  test_detector.py  test_detector_performance.py  test_doctor.py  test_doctor_llm.py  test_dry_run.py  test_edition.py  test_edition_v2.py  test_fuser.py  test_gate_messages.py  test_gate_rate_limiter.py  test_intent_router.py  test_interaction_classifier.py  test_interaction_engine.py  test_interaction_executor.py  test_interaction_normalizer.py  test_interaction_plan.py  test_latency_tracking.py  test_logs_cli.py  test_message_dedup.py  (+38 more)
(+218 files in other folders)
