[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-cli"
version = "0.1.0"
description = "Remote interactive prompt relay for AI CLI tools — forward prompts to your phone, reply from anywhere"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aegis Contributors" }]
keywords = ["ai", "cli", "telegram", "relay", "interactive", "claude", "pty", "remote"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    # CLI framework
    "click>=8.1",
    # HTTP client (Telegram long polling)
    "httpx>=0.27",
    # Async support
    "anyio>=4.4",
    # Settings and config management
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # TOML parsing (stdlib tomllib is read-only; tomli-w for writing)
    "tomli-w>=1.0",
    # Structured logging
    "structlog>=24.1",
    # Rich terminal output
    "rich>=13.7",
    # PTY handling for tool wrapping
    "ptyprocess>=0.7",
    # Process management
    "psutil>=5.9",
    # Secret detection (doctor check)
    "detect-secrets>=1.5",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",           # HTTP mocking for httpx
    # Linting and formatting
    "ruff>=0.4",
    # Type checking
    "mypy>=1.10",
    "types-psutil",
    # Security scanning
    "bandit[toml]>=1.7",
    # Build tools
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
aegis = "aegis.cli.main:cli"

[project.urls]
Homepage = "https://github.com/aegis-cli/aegis-cli"
Repository = "https://github.com/aegis-cli/aegis-cli"
Issues = "https://github.com/aegis-cli/aegis-cli/issues"
Changelog = "https://github.com/aegis-cli/aegis-cli/blob/main/CHANGELOG.md"
Security = "https://github.com/aegis-cli/aegis-cli/blob/main/SECURITY.md"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "S101",    # Use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["ptyprocess.*", "detect_secrets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: unit tests (no I/O)",
    "integration: integration tests (may use SQLite, network mocks)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["aegis"]
omit = ["tests/*", "aegis/cli/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — ok in non-production paths

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
