[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-cli"
version = "0.1.0"
description = "Universal human-in-the-loop control plane for AI developer agents — forward prompts to your phone, reply from anywhere"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aegis Contributors" }]
keywords = ["ai", "cli", "telegram", "relay", "interactive", "claude", "pty", "remote"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    # CLI framework
    "click>=8.1",
    # HTTP client (Telegram long polling)
    "httpx>=0.27",
    # Async support
    "anyio>=4.4",
    # Settings and config management
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # TOML parsing (stdlib tomllib is read-only; tomli-w for writing)
    "tomli-w>=1.0",
    # Structured logging
    "structlog>=24.1",
    # Rich terminal output
    "rich>=13.7",
    # PTY handling for tool wrapping
    "ptyprocess>=0.7",
    # Process management
    "psutil>=5.9",
    # Secret detection (doctor check)
    "detect-secrets>=1.5",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",           # HTTP mocking for httpx
    # Linting and formatting
    "ruff>=0.4",
    # Type checking
    "mypy>=1.10",
    "types-psutil",
    # Security scanning
    "bandit[toml]>=1.7",
    # Build tools
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
aegis = "aegis.cli.main:cli"

[project.urls]
Homepage = "https://github.com/abdulraoufatia/aegis-cli"
Repository = "https://github.com/abdulraoufatia/aegis-cli"
Issues = "https://github.com/abdulraoufatia/aegis-cli/issues"
Changelog = "https://github.com/abdulraoufatia/aegis-cli/blob/main/CHANGELOG.md"
Security = "https://github.com/abdulraoufatia/aegis-cli/blob/main/SECURITY.md"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
# Root package (aegis/) is the installed distribution for now.
# src/aegis/ stubs will become the primary package in v0.2.0.
where = ["."]
include = ["aegis*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed Any — needed for generic helpers and callback dispatch
    "S101",    # Use of assert (ok in tests)
    "S110",    # try-except-pass — intentional in cleanup/signal handlers
    "S602",    # shell=True — intentional; test_command is operator-supplied, not user input
    "S603",    # subprocess without shell — intentional for git/test commands
    "S606",    # start process without shell — intentional for os.execvp in logs cmd
    "S607",    # partial executable path — intentional (tail, git on PATH)
    "S608",    # SQL injection — false positive; all queries use parameterised bindings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "S105", "S106", "S108"]
"aegis/policy/detector.py" = ["E501"]         # regex patterns are inherently long
# New src/aegis design stubs — full lint enforcement deferred to v0.2.0 implementation
"src/**/*.py" = ["ANN", "I", "F401", "E501", "N", "UP", "B", "C4", "S", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false        # JSON responses are typed as Any throughout; too noisy
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false  # Required for Dict[str, Any] patterns in JSON handling
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["ptyprocess.*", "detect_secrets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aegis.audit.writer",
    "aegis.store.models",
    "aegis.bridge.pty_supervisor",
    "aegis.channels.telegram.bot",
    "aegis.channels.base",
]
# Pre-existing strict-mode issues in modules that require real I/O to type correctly
ignore_errors = true

[[tool.mypy.overrides]]
# New src/aegis package — design stubs; strict mode applied incrementally
module = ["aegis.os.*", "aegis.adapters.*", "aegis.core.daemon.*", "aegis.core.routing.*", "aegis.core.session.*", "aegis.core.store.*", "aegis.core.audit.*", "aegis.channels.*", "aegis.cli.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: unit tests (no I/O)",
    "integration: integration tests (may use SQLite, network mocks)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["aegis"]
omit = [
    "tests/*",
    "aegis/cli/main.py",
    "aegis/core/github_client.py",         # requires live GitHub API
    "aegis/core/fix_engine.py",            # requires subprocess + Anthropic API
    "aegis/core/daemon_services/*.py",     # daemon fork/signal code not unit-testable
    # New src/aegis design stubs — coverage added in v0.2.0 implementation
    "src/aegis/os/*",
    "src/aegis/core/daemon/*",
    "src/aegis/channels/*",
    "src/aegis/cli/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used — ok in non-production paths
    "B110",  # try_except_pass — intentional in PTY/signal cleanup handlers
    "B404",  # subprocess import — required for test runner and git operations
    "B602",  # shell=True — intentional; test_command is operator-supplied, not user input
    "B603",  # subprocess without shell — intentional for git/process control
    "B606",  # start without shell — intentional for os.execvp in logs cmd
    "B607",  # partial executable path — tail/git resolved from PATH
    "B608",  # SQL injection — false positive; all queries use parameterised bindings
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
