[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasbridge"
version = "0.9.4"
description = "Policy-driven autonomous runtime for AI CLI agents — deterministic rule evaluation, built-in human escalation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AtlasBridge Contributors" }]
keywords = ["ai", "cli", "policy", "autonomous", "agent", "claude", "pty", "telegram", "escalation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    # CLI framework
    "click>=8.1",
    # HTTP client (Telegram long polling)
    "httpx>=0.27",
    # Async support
    "anyio>=4.4",
    # Settings and config management
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # TOML parsing (stdlib tomllib is read-only; tomli-w for writing)
    "tomli-w>=1.0",
    # Structured logging
    "structlog>=24.1",
    # Rich terminal output
    "rich>=13.7",
    # Interactive TUI
    "textual>=0.50",
    # PTY handling for tool wrapping
    "ptyprocess>=0.7",
    # Process management
    "psutil>=5.9",
    # Secret detection (doctor check)
    "detect-secrets>=1.5",
    # Policy DSL YAML parsing
    "PyYAML>=6.0",
]

[project.optional-dependencies]
slack = [
    "slack-sdk>=3.19",
    "websockets>=11",
]
keyring = [
    "keyring>=25",
]
dashboard = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    # Linting and formatting
    "ruff>=0.4",
    # Type checking
    "mypy>=1.10",
    "types-psutil",
    "types-PyYAML",
    # Security scanning
    "bandit[toml]>=1.7",
    # Build tools
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
atlasbridge = "atlasbridge.cli.main:cli"

[project.urls]
Homepage = "https://github.com/abdulraoufatia/atlasbridge"
Repository = "https://github.com/abdulraoufatia/atlasbridge"
Issues = "https://github.com/abdulraoufatia/atlasbridge/issues"
Changelog = "https://github.com/abdulraoufatia/atlasbridge/blob/main/CHANGELOG.md"
Security = "https://github.com/abdulraoufatia/atlasbridge/blob/main/SECURITY.md"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atlasbridge = ["**/*.tcss", "dashboard/templates/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["_legacy_aegis"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed Any — needed for generic helpers and callback dispatch
    "S101",    # Use of assert (ok in tests)
    "S110",    # try-except-pass — intentional in cleanup/signal handlers
    "S602",    # shell=True — intentional; test_command is operator-supplied, not user input
    "S603",    # subprocess without shell — intentional for git/test commands
    "S606",    # start process without shell — intentional for os.execvp in logs cmd
    "S607",    # partial executable path — intentional (tail, git on PATH)
    "S608",    # SQL injection — false positive; all queries use parameterised bindings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "S105", "S106", "S108", "S104"]
"tests/dashboard/**/*.py" = ["S101", "ANN", "E501", "S104", "F401", "I"]
"tests/prompt_lab/**/*.py" = ["S101", "ANN", "F401", "E501", "UP", "I", "B"]
"src/atlasbridge/cli/*.py" = ["ANN", "E501", "E402"]
"src/atlasbridge/core/daemon/*.py" = ["ANN"]
"src/atlasbridge/os/**/*.py" = ["ANN"]
"src/atlasbridge/adapters/*.py" = ["ANN", "E501"]
"src/atlasbridge/channels/**/*.py" = ["ANN"]
"src/atlasbridge/tui/**/*.py" = ["ANN", "E501"]
"src/atlasbridge/ui/**/*.py" = ["ANN", "E501"]
"src/atlasbridge/console/**/*.py" = ["ANN", "E501"]
"src/atlasbridge/core/policy/**/*.py" = ["ANN", "E501", "UP042"]
"src/atlasbridge/core/autopilot/**/*.py" = ["ANN", "UP042"]
"src/atlasbridge/enterprise/**/*.py" = ["ANN"]
"src/atlasbridge/cloud/**/*.py" = ["ANN"]
"src/atlasbridge/dashboard/**/*.py" = ["ANN", "UP017"]
"tests/console/**/*.py" = ["S101", "ANN", "E501"]
"tests/policy/**/*.py" = ["S101", "ANN", "E501", "B017", "F841"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
explicit_package_bases = true
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["ptyprocess.*", "detect_secrets.*", "textual.*", "slack_sdk.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "atlasbridge.os.*",
    "atlasbridge.cli.*",
    "atlasbridge.tui.*",
    "atlasbridge.ui.*",
    "atlasbridge.console.*",
    "atlasbridge.dashboard.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: unit tests (no I/O)",
    "integration: integration tests (may use SQLite, network mocks)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["atlasbridge"]
omit = [
    "tests/*",
    "*/atlasbridge/cli/main.py",
    "*/atlasbridge/os/*",
    "*/atlasbridge/core/daemon/*",
    "*/atlasbridge/channels/*",
    "*/atlasbridge/cli/*",
    "*/atlasbridge/tui/*",
    "*/atlasbridge/ui/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",
    "B105",  # hardcoded_password_string — false positive on empty default token fields
    "B110",
    "B404",
    "B602",
    "B603",
    "B606",
    "B607",
    "B608",
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
